Add product grid, location, footer

--- a/index.html
+++ b/index.html
@@ -41,6 +41,43 @@
         </nav>
       </div>
 
+      <!-- Product Grid  -->
+      <div class="product">
+
+        <!-- Exploding Pen  -->
+        <div class="product-image">
+          <img src="./resources/images/pen.png">Exploding Pen</img>
+        </div>
+
+        <!--  Cellular Watch  -->
+        <div class="product-image">
+          <img src="./resources/images/watch.png">Cellular Watch</img>
+        </div>
+
+        <!--  Thermal Glasses  -->
+        <div class="product-image">
+          <img src="./resources/images/glasses.png">Thermal Glasses</img>
+        </div>
+      </div>
+
+      <!--  Location and Hours  -->
+      <div class="location-hours">
+        <div class="location">
+          <h3>Location</h3>
+          <p>-47.,84</p>
+        </div>
+
+        <div class="hours">
+          <h3>Hours</h3>
+          <p>0800 - 1300</p>
+        </div>
+      </div>
+
+      <!--  Footer  -->
+      <div class="footer">
+        <p>Copyright Secret Agent Supply Inc.</p>
+      </div>
+
 
     </div>
 
