Finish navigation css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="header-container">
         <img src="./resources/images/logo.png">
         <span class="header-text">
-          Secret Agent Supply Inc.
+          SECRET AGENT SUPPLY INC.
         </span>
       </div>
 
