--- a/index.html
+++ b/index.html
@@ -45,18 +45,20 @@
       <div class="product">
 
         <!-- Exploding Pen  -->
-        <div class="product-image">
-          <img src="./resources/images/pen.png">Exploding Pen</img>
-        </div>
+        <div class="product-container">
+          <div class="product-image">
+            <img src="./resources/images/pen.png">Exploding Pen</img>
+          </div>
 
-        <!--  Cellular Watch  -->
-        <div class="product-image">
-          <img src="./resources/images/watch.png">Cellular Watch</img>
-        </div>
+          <!--  Cellular Watch  -->
+          <div class="product-image">
+            <img src="./resources/images/watch.png">Cellular Watch</img>
+          </div>
 
-        <!--  Thermal Glasses  -->
-        <div class="product-image">
-          <img src="./resources/images/glasses.png">Thermal Glasses</img>
+          <!--  Thermal Glasses  -->
+          <div class="product-image">
+            <img src="./resources/images/glasses.png">Thermal Glasses</img>
+          </div>
         </div>
       </div>
 
