--- a/index.html
+++ b/index.html
@@ -47,37 +47,44 @@
         <!-- Exploding Pen  -->
         <div class="product-container">
           <div class="product-image">
-            <img src="./resources/images/pen.png">Exploding Pen</img>
+            <img src="./resources/images/pen.png">
+            <span>Exploding Pen</span></img>
           </div>
 
           <!--  Cellular Watch  -->
           <div class="product-image">
-            <img src="./resources/images/watch.png">Cellular Watch</img>
+            <img src="./resources/images/watch.png">
+            <span>Cellular Watch</span></img>
           </div>
 
           <!--  Thermal Glasses  -->
           <div class="product-image">
-            <img src="./resources/images/glasses.png">Thermal Glasses</img>
+            <img src="./resources/images/glasses.png">
+            <span>Thermal Glasses</span></img>
           </div>
         </div>
       </div>
 
       <!--  Location and Hours  -->
-      <div class="location-hours">
-        <div class="location">
-          <h3>Location</h3>
-          <p>-47.,84</p>
-        </div>
+      <div class="location-container">
+        <div class="location-hours">
+          <div class="location">
+            <h3>Location</h3>
+            <p>-47.346436, 84.32354</p>
+          </div>
 
-        <div class="hours">
-          <h3>Hours</h3>
-          <p>0800 - 1300</p>
+          <div class="hours">
+            <h3>Hours</h3>
+            <p>0800 - 1300</p>
+          </div>
         </div>
       </div>
 
       <!--  Footer  -->
       <div class="footer">
-        <p>Copyright Secret Agent Supply Inc.</p>
+        <div class="copyright-container">
+          <p>Copyright Secret Agent Supply Inc.</p>
+        </div>
       </div>
 
 
