Add media query 1024px

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
       <!-- Navigation Section  -->
       <div class="nav">
+        <div id="menu">Menu</div>
         <nav>
           <span>Eyewear</span>
           <span>Apparel</span>
@@ -46,19 +47,19 @@
 
         <!-- Exploding Pen  -->
         <div class="product-container">
-          <div class="product-image">
+          <div class="product-image" id="pen">
             <img src="./resources/images/pen.png">
             <span>Exploding Pen</span></img>
           </div>
 
           <!--  Cellular Watch  -->
-          <div class="product-image">
+          <div class="product-image" id="watch">
             <img src="./resources/images/watch.png">
             <span>Cellular Watch</span></img>
           </div>
 
           <!--  Thermal Glasses  -->
-          <div class="product-image">
+          <div class="product-image" id="glasses">
             <img src="./resources/images/glasses.png">
             <span>Thermal Glasses</span></img>
           </div>
